--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "global": "^4.3.1",
     "nlcst-to-string": "^2.0.0",
     "retext-english": "^3.0.0",
-    "syllable": "^2.0.0",
+    "syllable": "^3.0.0",
     "unified": "^6.1.0",
     "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
-    "browserify": "^14.1.0",
+    "browserify": "^16.0.0",
     "bundle-collapser": "^1.2.1",
     "cssnano": "^3.10.0",
     "esmangle": "^1.0.1",
-    "postcss-cli": "^4.1.0",
-    "rehype-cli": "^4.0.0",
+    "postcss-cli": "^5.0.0",
+    "rehype-cli": "^5.0.0",
     "rehype-preset-minify": "^2.0.0",
     "rehype-prevent-favicon-request": "^1.0.0",
-    "stylelint": "^8.0.0",
-    "stylelint-config-standard": "^17.0.0",
-    "xo": "^0.18.0"
+    "stylelint": "^9.0.0",
+    "stylelint-config-standard": "^18.0.0",
+    "xo": "^0.20.0"
   },
   "scripts": {
     "build:js": "browserify -p bundle-collapser/plugin src/index.js | esmangle > dest/index.js",
@@ -36,7 +36,11 @@
   },
   "xo": {
     "space": true,
-    "esnext": false
+    "esnext": false,
+    "rules": {
+      "no-var": "off",
+      "object-shorthand": "off"
+    }
   },
   "postcss": {
     "plugins": {
