--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "www-short-words",
   "private": true,
+  "license": "MIT",
+  "repository": "wooorm/short-words",
+  "bugs": "https://github.com/wooorm/short-words/issues",
+  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "contributors": [
+    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+  ],
   "dependencies": {
     "debounce": "^1.0.0",
     "global": "^4.3.1",
@@ -16,26 +23,37 @@
     "cssnano": "^3.10.0",
     "esmangle": "^1.0.1",
     "postcss-cli": "^5.0.0",
+    "prettier": "^1.12.1",
     "rehype-cli": "^5.0.0",
     "rehype-preset-minify": "^2.0.0",
     "rehype-prevent-favicon-request": "^1.0.0",
+    "remark-cli": "^5.0.0",
+    "remark-preset-wooorm": "^4.0.0",
     "stylelint": "^9.0.0",
     "stylelint-config-standard": "^18.0.0",
     "xo": "^0.20.0"
   },
   "scripts": {
+    "format": "remark . -qfo && prettier --write '**/*.js' && xo --fix && stylelint src/index.css --fix",
     "build:js": "browserify -p bundle-collapser/plugin src/index.js | esmangle > dest/index.js",
     "build:css": "postcss src/index.css > dest/index.css",
     "build:html": "rehype -u preset-minify -u prevent-favicon-request src -o dest",
     "build": "npm run build:js && npm run build:css && npm run build:html",
-    "lint": "xo && stylelint src/index.css",
-    "test": "npm run lint && npm run build"
+    "test": "npm run format && npm run build"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
   },
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "bracketSpacing": false,
+    "semi": false,
+    "trailingComma": "none"
+  },
   "xo": {
-    "space": true,
+    "prettier": true,
     "esnext": false,
     "rules": {
       "no-var": "off",
@@ -48,5 +66,10 @@
         "preset": "default"
       }
     }
+  },
+  "remarkConfig": {
+    "plugins": [
+      "preset-wooorm"
+    ]
   }
 }
