--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
     "nlcst-to-string": "^2.0.0",
     "retext-english": "^3.0.0",
     "syllable": "^3.0.0",
-    "unified": "^6.1.0",
+    "unified": "^7.0.0",
     "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
     "browserify": "^16.0.0",
     "bundle-collapser": "^1.2.1",
-    "cssnano": "^3.10.0",
+    "cssnano": "^4.0.0",
     "esmangle": "^1.0.1",
-    "postcss-cli": "^5.0.0",
+    "postcss-cli": "^6.0.0",
     "prettier": "^1.12.1",
-    "rehype-cli": "^5.0.0",
-    "rehype-preset-minify": "^2.0.0",
+    "rehype-cli": "^7.0.0",
+    "rehype-preset-minify": "^3.0.0",
     "rehype-prevent-favicon-request": "^1.0.0",
-    "remark-cli": "^5.0.0",
+    "remark-cli": "^6.0.0",
     "remark-preset-wooorm": "^4.0.0",
-    "stylelint": "^9.0.0",
+    "stylelint": "^10.0.0",
     "stylelint-config-standard": "^18.0.0",
-    "xo": "^0.20.0"
+    "xo": "^0.24.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix && stylelint src/index.css --fix",
@@ -57,7 +57,8 @@
     "esnext": false,
     "rules": {
       "no-var": "off",
-      "object-shorthand": "off"
+      "object-shorthand": "off",
+      "unicorn/prefer-node-append": "off"
     }
   },
   "postcss": {
