--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     "global": "^4.3.1",
     "nlcst-to-string": "^2.0.0",
     "retext-english": "^3.0.0",
-    "syllable": "^3.0.0",
-    "unified": "^7.0.0",
-    "virtual-dom": "^2.1.1"
+    "syllable": "^4.0.0",
+    "unified": "^9.0.0",
+    "virtual-dom": "^2.0.0"
   },
   "devDependencies": {
-    "browserify": "^16.0.0",
+    "browserify": "^17.0.0",
     "cssnano": "^4.0.0",
-    "postcss-cli": "^6.0.0",
-    "prettier": "^1.0.0",
-    "rehype-cli": "^8.0.0",
-    "rehype-preset-minify": "^4.0.0",
+    "postcss-cli": "^8.0.0",
+    "prettier": "^2.0.0",
+    "rehype-cli": "^9.0.0",
+    "rehype-preset-minify": "^5.0.0",
     "rehype-prevent-favicon-request": "^2.0.0",
-    "remark-cli": "^7.0.0",
-    "remark-preset-wooorm": "^6.0.0",
-    "stylelint": "^11.0.0",
-    "stylelint-config-standard": "^19.0.0",
-    "tinyify": "^2.0.0",
-    "xo": "^0.25.0"
+    "remark-cli": "^9.0.0-alpha.1",
+    "remark-preset-wooorm": "^8.0.0",
+    "stylelint": "^13.0.0",
+    "stylelint-config-standard": "^20.0.0",
+    "tinyify": "^3.0.0",
+    "xo": "^0.33.0"
   },
   "scripts": {
-    "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix && stylelint src/index.css --fix",
+    "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix && stylelint src/ --fix",
     "build:js": "browserify src -o dest/index.js",
     "build:css": "postcss src/index.css > dest/index.css",
     "build:html": "rehype -u preset-minify -u prevent-favicon-request src -o dest",
@@ -55,7 +55,8 @@
     "prettier": true,
     "esnext": false,
     "rules": {
-      "unicorn/prefer-node-append": "off"
+      "unicorn/prefer-node-append": "off",
+      "unicorn/prefer-number-properties": "off"
     }
   },
   "postcss": {
