--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
+  "type": "module",
   "dependencies": {
     "debounce": "^1.0.0",
     "global": "^4.3.1",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "browserify": "^17.0.0",
     "cssnano": "^4.0.0",
+    "esbuild": "^0.9.0",
     "postcss-cli": "^8.0.0",
     "prettier": "^2.0.0",
     "rehype-cli": "^10.0.0",
@@ -34,7 +36,7 @@
   },
   "scripts": {
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix && stylelint src/ --fix",
-    "build:js": "browserify src -o dest/index.js",
+    "build:js": "esbuild src/index.js --bundle --minify --target=es6 --outfile=dest/index.nomodule.js && esbuild src/index.js --bundle --minify --target=es2020 --format=esm --outfile=dest/index.module.js",
     "build:css": "postcss src/index.css > dest/index.css",
     "build:html": "rehype -u preset-minify -u prevent-favicon-request src -o dest",
     "build": "npm run build:js && npm run build:css && npm run build:html",
@@ -53,8 +55,8 @@
   },
   "xo": {
     "prettier": true,
-    "esnext": false,
     "rules": {
+      "no-var": "off",
       "unicorn/prefer-dom-node-append": "off",
       "unicorn/prefer-number-properties": "off"
     }
