--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "virtual-dom": "^2.0.0"
   },
   "devDependencies": {
-    "browserify": "^17.0.0",
     "cssnano": "^4.0.0",
     "esbuild": "^0.9.0",
     "postcss-cli": "^8.0.0",
@@ -27,11 +26,10 @@
     "rehype-cli": "^10.0.0",
     "rehype-preset-minify": "^5.0.0",
     "rehype-prevent-favicon-request": "^2.0.0",
-    "remark-cli": "^9.0.0-alpha.1",
+    "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "stylelint": "^13.0.0",
     "stylelint-config-standard": "^21.0.0",
-    "tinyify": "^3.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
