--- a/package.json
+++ b/package.json
@@ -1,83 +1,87 @@
 {
-  "name": "www-short-words",
-  "private": true,
-  "license": "MIT",
-  "repository": "wooorm/short-words",
-  "bugs": "https://github.com/wooorm/short-words/issues",
   "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "bugs": "https://github.com/wooorm/short-words/issues",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
-  "type": "module",
-  "dependencies": {
-    "debounce": "^1.0.0",
-    "nlcst-to-string": "^3.0.0",
-    "retext-english": "^4.0.0",
-    "syllable": "^5.0.0",
-    "unified": "^10.0.0",
-    "virtual-dom": "^2.0.0"
-  },
   "devDependencies": {
-    "@types/debounce": "^1.0.0",
-    "@types/nlcst": "^1.0.0",
-    "@types/virtual-dom": "^2.0.0",
-    "cssnano": "^5.0.0",
-    "esbuild": "^0.15.0",
-    "postcss-cli": "^10.0.0",
-    "prettier": "^2.0.0",
-    "rehype-cli": "^11.0.0",
-    "rehype-preset-minify": "^6.0.0",
-    "rehype-prevent-favicon-request": "^3.0.0",
-    "remark-cli": "^11.0.0",
-    "remark-preset-wooorm": "^9.0.0",
-    "stylelint": "^14.0.0",
-    "stylelint-config-standard": "^29.0.0",
+    "@types/nlcst": "^2.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "cssnano": "^7.0.0",
+    "esbuild": "^0.24.0",
+    "nlcst-to-string": "^4.0.0",
+    "parse-english": "^7.0.0",
+    "postcss-cli": "^11.0.0",
+    "postcss-preset-env": "^10.0.0",
+    "prettier": "^3.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rehype-cli": "^12.0.0",
+    "rehype-preset-minify": "^7.0.0",
+    "rehype-prevent-favicon-request": "^4.0.0",
+    "remark-cli": "^12.0.0",
+    "remark-preset-wooorm": "^10.0.0",
+    "stylelint": "^16.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "syllable": "^5.0.0",
     "type-coverage": "^2.0.0",
-    "typescript": "^4.0.0",
-    "xo": "^0.53.0"
+    "typescript": "^5.0.0",
+    "xo": "^0.59.0"
   },
-  "scripts": {
-    "build": "tsc --build --clean && tsc --build && type-coverage",
-    "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix && stylelint src/index.css --fix",
-    "generate:js": "esbuild src/index.js --bundle --minify --target=es6 --outfile=dest/index.nomodule.js && esbuild src/index.js --bundle --minify --target=es2020 --format=esm --outfile=dest/index.module.js",
-    "generate:css": "postcss src/index.css > dest/index.css",
-    "generate:html": "rehype -u preset-minify -u prevent-favicon-request src -o dest",
-    "generate": "npm run generate:js && npm run generate:css && npm run generate:html",
-    "test": "npm run build && npm run format && npm run generate"
-  },
-  "stylelint": {
-    "extends": "stylelint-config-standard"
-  },
-  "prettier": {
-    "tabWidth": 2,
-    "useTabs": false,
-    "singleQuote": true,
-    "bracketSpacing": false,
-    "semi": false,
-    "trailingComma": "none"
-  },
-  "xo": {
-    "prettier": true,
-    "rules": {
-      "unicorn/prefer-dom-node-append": "off"
-    }
-  },
+  "license": "MIT",
+  "name": "www-short-words",
   "postcss": {
     "plugins": {
+      "postcss-preset-env": {},
       "cssnano": {
         "preset": "default"
       }
     }
   },
+  "prettier": {
+    "bracketSpacing": false,
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "useTabs": false
+  },
+  "private": true,
   "remarkConfig": {
     "plugins": [
-      "preset-wooorm"
+      "remark-preset-wooorm"
     ]
   },
+  "repository": "wooorm/short-words",
   "typeCoverage": {
     "atLeast": 100,
-    "detail": true,
-    "strict": true,
-    "ignoreCatch": true
+    "strict": true
+  },
+  "type": "module",
+  "scripts": {
+    "build": "tsc --build --clean && tsc --build && type-coverage",
+    "format": "remark --frail --output --quiet -- . && prettier --log-level warn --write -- . && xo && stylelint src/index.css --fix",
+    "generate:css": "postcss --output dest/index.css -- src/index.css",
+    "generate:html": "rehype --frail --output dest/ --quiet --use rehype-preset-minify --use rehype-prevent-favicon-request -- src/",
+    "generate:js:module": "esbuild src/index.jsx --bundle --conditions=browser,production --define:process.env.NODE_ENV=\\\"production\\\" --format=esm --loader:.js=jsx --log-level=warning --minify --outfile=dest/index.module.js --target=es2020",
+    "generate:js:nomodule": "esbuild src/index.jsx --bundle --conditions=browser,production --define:process.env.NODE_ENV=\\\"production\\\" --loader:.js=jsx --log-level=warning --minify --outfile=dest/index.nomodule.js --target=es6",
+    "generate:js": "npm run generate:js:module && npm run generate:js:nomodule",
+    "generate": "npm run generate:css && npm run generate:html && npm run generate:js",
+    "test": "npm run build && npm run format && npm run generate"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
+  },
+  "xo": {
+    "prettier": true,
+    "rules": {
+      "unicorn/prefer-at": "off"
+    }
   }
 }
